Fixed bug restoring ZSF snapshot with DivIDE enabled
Fixed segfault when pressing CTRL-C on console
Fixed PCW palette colour changes
Fixed Chloe keyboard: allow fast text writing
Fixed toggle breakpoint on a position that already had a breakpoint when breakpoints were disabled
Fixed smartloading a tape file when a dsk is inserted

----


ZEsarUX 12 - Bubble Bobble edition. 16 January 2025

* New things added:

Added ZX Microdrive emulation on ZX Spectrum: that includes:
- Standard MDR emulation. Allow to browse inside MDR files, see file map, fragmentation, rename files, sectors info, chkdsk and emulate bad sectors
- Raw microdrive emulation. Supporting other non-interface1 rom file formats, like extending microdrive space with Multiface 128 or CP/M for LEC memory. Allow to see microdrive raw map (gap zones, sync bytes, data) and have "real problems", like autogenerate bad sectors or stretching the microdrive when it's new.
- Simulate data sound on read and write
- Visual Microdrive: Allow to see a microdrive cartridge in action

Added Visual Cassette Tape window
Added LEC memory extension emulation
Added machines Czerweny CZ 1000, CZ 1500, CZ 1000 Plus, CZ 1500 Plus, CZ 2000, CZ Spectrum, CZ Spectrum Plus
Added Memory Cheat feature: useful to find counters of energy, bombs, ammo or any other cheat in a game
Added Find text string on memory menu
Added Quicksave screen function
Added setting to disable persistent writes on Z88 Cards
Added CPC Additional ROMS emulation
Added setting "--simplemenus" to have a very simple main menu

* Improvements:

Allow save screen to bmp for most machines
Allow hotswap to Pentagon and to Spectrum +3
Allow hotswap from Spectrum 128 to Spectrum +3
Allow to load .SP snapshots of 64kb (like Shadow of Unicorn)
Improve Azimuth warning on External Audio Source Window
Added SDHC cards addressing support
Added Flash Color mode (128 colors)
Allow to not save snapshot when exiting ZEsarUX
Allow to load an additional config file .zesaruxdevrc