@@ -109,6 +109,3 @@ ok * desactivar botones superiores si esta topbar
 
 
 -quiza cambiar charset de tema ZEsarUX Plus por el de AtariTOS
-
-
--si se inserta cinta no soportada (como savage.tap.zip) el visual casette tape sale todo relleno de lineas radiales
