@@ -78,6 +78,7 @@ Fixed PCW palette colour changes
 Fixed Chloe keyboard: allow fast text writing
 Fixed toggle breakpoint on a position that already had a breakpoint when breakpoints were disabled
 Fixed smartloading a tape file when a dsk is inserted
+Fixed visual casette tape when inserting an unsupported tape
 
 ----
 
